[gd_scene load_steps=10 format=3 uid="uid://dg58i4nwjjh3u"]

[ext_resource type="Script" path="res://assets/scenes/main.gd" id="1_5jprt"]
[ext_resource type="PackedScene" uid="uid://lyjts5pxh2he" path="res://assets/components/fake_invisible_check_button.tscn" id="1_dbygy"]
[ext_resource type="Script" path="res://assets/scripts/get_started_button.gd" id="2_nmwo6"]
[ext_resource type="Script" path="res://assets/scenes/camera.gd" id="2_uogdc"]
[ext_resource type="Texture2D" uid="uid://c576pme8oj2db" path="res://assets/UI/Exit.png" id="3_1twra"]
[ext_resource type="Script" path="res://assets/scripts/exit_button.gd" id="4_d2bto"]
[ext_resource type="Texture2D" uid="uid://bdu14ue1k7538" path="res://assets/UI/Cog.png" id="5_etyys"]
[ext_resource type="Script" path="res://assets/scripts/options.gd" id="6_2ruce"]
[ext_resource type="PackedScene" uid="uid://dujchpnmlpam0" path="res://assets/components/option_menu.tscn" id="7_hhfae"]

[node name="Scene" type="Node2D"]
script = ExtResource("1_5jprt")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -707.0
offset_top = -416.0
offset_right = 776.0
offset_bottom = 418.0

[node name="EnableKeyboard" parent="." instance=ExtResource("1_dbygy")]
text = "Enable arrow key on the keyboard"

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_uogdc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -20.0
offset_right = 58.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Get Started Button" type="Button" parent="CanvasLayer/MarginContainer2/GridContainer"]
layout_mode = 2
text = "Get started"
script = ExtResource("2_nmwo6")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Exit Button" type="TextureButton" parent="CanvasLayer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_1twra")
script = ExtResource("4_d2bto")

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="OptionsButton" type="TextureButton" parent="CanvasLayer/MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_etyys")
script = ExtResource("6_2ruce")

[node name="OptionMenu" parent="CanvasLayer/MarginContainer3/VBoxContainer" instance=ExtResource("7_hhfae")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="EnableKeyboard" to="." method="_on_enable_keyboard_pressed"]
[connection signal="focus_entered" from="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" to="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" to="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" method="_on_focus_exited"]
[connection signal="pressed" from="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" to="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" method="_on_pressed"]
[connection signal="show_exit" from="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" to="CanvasLayer/MarginContainer/Exit Button" method="_on_get_started_button_show_exit"]
[connection signal="show_options" from="CanvasLayer/MarginContainer2/GridContainer/Get Started Button" to="CanvasLayer/MarginContainer3/VBoxContainer/OptionsButton" method="_on_get_started_button_show_options"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Exit Button" to="CanvasLayer/MarginContainer/Exit Button" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer3/VBoxContainer/OptionsButton" to="CanvasLayer/MarginContainer3/VBoxContainer/OptionsButton" method="_on_pressed"]
[connection signal="color_changed" from="CanvasLayer/MarginContainer3/VBoxContainer/OptionMenu" to="CanvasLayer/MarginContainer3/VBoxContainer/OptionsButton" method="_on_option_menu_color_changed"]
